Fix linkedin username

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.aweldernerd.com" # the base hostname & protocol for your site
 # twitter_username: aweldernerd
-# github_username: aweldernerd
-# linkedin_username: jacobelder
+github_username: aweldernerd
+# linkedin_username: andy-elder-09937593
 
 # google_analytics: G-8EQ7M4FXV3
 
