--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://aweldernerd.com" # the base hostname & protocol for your site
 # twitter_username: aweldernerd
-github_username: aweldernerd
+# github_username: aweldernerd
 linkedin_username: andy-elder-09937593
 
 # google_analytics: G-8EQ7M4FXV3
